# pytest-plugin-demo

./: README.md  pyproject.toml
src/pytest_plugin_demo/: __init__.py  todo_service.py
tests/: conftest.py  test_todo_service.py
tests/data/: test_tasks.csv
