[project]
name = "pytest-plugin-demo"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "pytest-xdist",
    "pytest-sugar",
    "pytest-icdiff",
    "anyio",
    "pytest-httpserver",
    "pytest-factoryboy",
    "pytest-datadir",
    "pytest-cov",
    "xdoctest",
    "typeguard"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-ra --cov=src --cov-report=term-missing"
testpaths = ["tests"]