[project]
name = "todo_app"
version = "0.1.0"
dependencies = [
    "requests",  
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-xdist",
    "pytest-sugar",
    "pytest-icdiff",
    "pytest-httpserver",
    "pytest-factoryboy",
    "pytest-datadir",
    "pytest-cov",
    "xdoctest",
    "pygments",
]

[tool.coverage.run]
source = ["pytest_plugin_demo", "tests"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true

